--- a/project/requirements.txt
+++ b/project/requirements.txt
@@ -1,1 +1,153 @@
- 
+ # AAPL Stock Prediction Project - Python Dependencies
+# Applied Financial Engineering Lifecycle Implementation
+# Generated for Stage 16 - Complete Project Requirements
+
+# ============================================================================
+# CORE DATA SCIENCE STACK
+# ============================================================================
+
+# Data Manipulation & Analysis
+pandas==2.0.3
+numpy==1.24.3
+scipy==1.11.1
+
+# Financial Data APIs
+yfinance==0.2.18
+
+# Machine Learning & Statistical Modeling
+scikit-learn==1.3.0
+statsmodels==0.14.0
+
+# ============================================================================
+# VISUALIZATION & PLOTTING
+# ============================================================================
+
+# Core Plotting Libraries
+matplotlib==3.7.2
+seaborn==0.12.2
+
+# Interactive Visualizations
+plotly==5.15.0
+
+# Network/Graph Plotting (for Stage 15 DAG visualization)
+networkx==3.1
+
+# ============================================================================
+# PRODUCTION API & WEB SERVICES
+# ============================================================================
+
+# Web Framework
+flask==2.3.2
+flask-cors==4.0.0
+
+# HTTP Requests
+requests==2.31.0
+
+# ============================================================================
+# DATA PROCESSING & FILE I/O
+# ============================================================================
+
+# Excel/Spreadsheet Support
+openpyxl==3.1.2
+
+# Progress Bars
+tqdm==4.65.0
+
+# ============================================================================
+# DEVELOPMENT & TESTING
+# ============================================================================
+
+# Jupyter Environment
+jupyter==1.0.0
+ipykernel==6.25.0
+notebook==7.0.2
+
+# Testing Framework
+pytest==7.4.0
+pytest-cov==4.1.0
+
+# ============================================================================
+# CODE QUALITY & FORMATTING
+# ============================================================================
+
+# Code Formatting
+black==23.7.0
+isort==5.12.0
+
+# Linting
+flake8==6.0.0
+
+# Type Checking
+mypy==1.5.1
+
+# ============================================================================
+# CONFIGURATION & ENVIRONMENT
+# ============================================================================
+
+# Environment Variables
+python-dotenv==1.0.0
+
+# ============================================================================
+# DOCUMENTATION
+# ============================================================================
+
+# Documentation Generation
+sphinx==7.1.2
+sphinx-rtd-theme==1.3.0
+
+# ============================================================================
+# ADDITIONAL UTILITIES
+# ============================================================================
+
+# Date/Time Utilities
+python-dateutil==2.8.2
+
+# JSON/YAML Processing
+pyyaml==6.0.1
+
+# Logging Enhancements
+colorlog==6.7.0
+
+# Memory Profiling (Development)
+memory-profiler==0.61.0
+
+# ============================================================================
+# PRODUCTION DEPLOYMENT (Optional)
+# ============================================================================
+
+# WSGI Server
+gunicorn==21.2.0
+
+# Process Management
+supervisor==4.2.5
+
+# ============================================================================
+# SECURITY & VALIDATION
+# ============================================================================
+
+# Input Validation
+cerberus==1.3.4
+
+# Security Headers
+flask-talisman==1.1.0
+
+# ============================================================================
+# COMPATIBILITY NOTES
+# ============================================================================
+# 
+# This requirements.txt is designed for:
+# - Python 3.10+
+# - Cross-platform compatibility (Windows, macOS, Linux)
+# - Production deployment capability
+# - Complete Applied Financial Engineering lifecycle support
+# 
+# Installation Instructions:
+# 1. Create virtual environment: conda create -n aapl-env python=3.10
+# 2. Activate environment: conda activate aapl-env
+# 3. Install requirements: pip install -r requirements.txt
+# 
+# For development installation with additional tools:
+# pip install -r requirements.txt[dev]
+#
+# Last Updated: Stage 16 - Lifecycle Review & Final Project Polish
+# ============================================================================
